# AcuteSelf

./: CMakeLists.txt  README.md
assets/: background.frag  background.vert  blurFrag.frag  emptyVert.vert  inverseAlpha.frag  mainFrag.frag  mainVert.vert
include/: AcuteMesh.h  AcuteSelfSetup.h  BackgroundPlane.h  BlurShadow.h  FrameSubtractor.h  MeshCollection.h  PointDetector.h  Resources.aps  Resources.h  Resources.rc  light.h
src/: AcuteMesh.cpp  AcuteSelfApp.cpp  BackgroundPlane.cpp  BlurShadow.cpp  FrameSubtractor.cpp  MeshCollection.cpp  PointDetector.cpp
